--- a/manifest.json
+++ b/manifest.json
@@ -3,49 +3,52 @@
   "name": "Прометей: Блокировщик рекламы",
   "version": "1.0.0",
   "description": "Курсовой проект: современный adblock на MV3",
-
   "icons": {
-    "16": "icons/16.png",
-    "48": "icons/48.png",
-    "128": "icons/128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
-
   "permissions": [
     "declarativeNetRequest",
     "storage",
     "activeTab",
     "scripting"
   ],
-
   "host_permissions": [
     "*://*/*"
   ],
-
   "declarative_net_request": {
-    "rule_resources": [{
-      "id": "ads_ruleset",
-      "enabled": true,
-      "path": "rules.json"
-    }]
+    "rule_resources": [
+      {
+        "id": "ads_ruleset",
+        "enabled": true,
+        "path": "rules.json"
+      }
+    ]
   },
-
   "background": {
     "service_worker": "background.js"
   },
-
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"],
-    "css": ["content.css"],
-    "run_at": "document_start"
-  }],
-
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "css": [
+        "content.css"
+      ],
+      "run_at": "document_start"
+    }
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/16.png",
-      "48": "icons/48.png",
-      "128": "icons/128.png"
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     },
     "default_title": "Прометей AdBlock"
   }
